--- a/src/templates/account/profile.html
+++ b/src/templates/account/profile.html
@@ -1,9 +1,7 @@
 {% extends 'base.html' %}
-
-{% block head %}
-
+{% block title %}
+    Profile Page
 {% endblock %}
 {% block body %}
-<h1>Hi, {{ current_user.username }}!</h1>
-
+<h1> Orders </h1>
 {% endblock %}
