--- a/src/templates/admin/home.html
+++ b/src/templates/admin/home.html
@@ -1,11 +1,9 @@
-{% extends 'base.html' %}
+{% extends 'admin/base.html' %}
 {% block head %}
 
 {% endblock %}
 {% block body %}
-<h1>Dashboard</h1>
-
-<h3>Usuarios:</h3>
+<!-- <h3>Usuarios:</h3>
 <table class="table table-striped table-hover table-bordered table-sm bg-white">
     <thead>
         <tr>
@@ -26,5 +24,5 @@
         </tr>
     </tbody>
     {% endfor %}
-</table>
+</table> -->
 {% endblock %}
