--- a/src/templates/base.html
+++ b/src/templates/base.html
@@ -23,7 +23,7 @@
     
 
     <nav class="navbar navbar-expand-md navbar-dark bg-dark">
-      <a class="navbar-brand" href="#">E-buysite</a>
+      <a class="navbar-brand" href="{{ url_for('public.home')}}">E-buysite</a>
       <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav">
         <span class="navbar-toggler-icon"></span>
       </button>
@@ -37,6 +37,7 @@
               {% if current_user.is_anonymous %}
               <li class="nav-item"><a class="nav-link" href="{{ url_for('account.login')}}">Login</a></li>
               {% else %}
+              <li class="nav-item"><a class="nav-link" href="{{ url_for('account.profile')}}">Profile</a>
               <li class="nav-item"><a class="nav-link" href="{{ url_for('account.logout')}}">Logout</a>
               {% endif %}
             </li>
