--- a/src/templates/admin/home.html
+++ b/src/templates/admin/home.html
@@ -3,7 +3,7 @@
 
 {% endblock %}
 {% block body %}
-<!-- <h3>Usuarios:</h3>
+<h3>Usuarios:</h3>
 <table class="table table-striped table-hover table-bordered table-sm bg-white">
     <thead>
         <tr>
@@ -24,5 +24,5 @@
         </tr>
     </tbody>
     {% endfor %}
-</table> -->
+</table>
 {% endblock %}
