--- a/src/templates/base.html
+++ b/src/templates/base.html
@@ -20,30 +20,30 @@
     <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.9.2/dist/umd/popper.min.js" integrity="sha384-IQsoLXl5PILFhosVNubq5LC7Qb9DXgDA9i+tQ8Zj3iwWAwPtgFTxbJ8NT4GN1R8p" crossorigin="anonymous"></script>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.min.js" integrity="sha384-cVKIPhGWiC2Al4u+LWgxfKTRIcfu0JTxR+EQDz/bgldoEyl4H0zUF0QKbrJ0EcQF" crossorigin="anonymous"></script>
     -->
-    
-
-    <nav class="navbar navbar-expand-md navbar-dark bg-dark">
+  <nav class="navbar navbar-expand-md navbar-dark bg-dark">
       <a class="navbar-brand" href="{{ url_for('public.home')}}">E-buysite</a>
-      <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav">
+      <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
         <span class="navbar-toggler-icon"></span>
       </button>
-      <div class="collapse navbar-collapse" id="navbarNav">
-        <ul class="navbar-nav mr-auto">
-            <li class="nav-item">
-                <a class="nav-link" href="#">Categories</a>
-            </li>
+      <div class="collapse navbar-collapse" id="navbarSupportedContent">
+        <ul class="navbar-nav navbar-nav me-auto">
+          <li>
+            <a class="nav-link" href="#">Categorias</a>
+          </li>
         </ul>
-        <ul class="navbar-nav">
-              {% if current_user.is_anonymous %}
-              <li class="nav-item"><a class="nav-link" href="{{ url_for('account.login')}}">Login</a></li>
-              {% else %}
-              <li class="nav-item"><a class="nav-link" href="{{ url_for('account.profile')}}">Profile</a>
-              <li class="nav-item"><a class="nav-link" href="{{ url_for('account.logout')}}">Logout</a>
-              {% endif %}
-            </li>
+        <ul class="navbar-nav justify-content-end flex-grow-1 pe-3">
+          {% if current_user.is_anonymous %}
+          <li class="nav-item"><a class="nav-link" href="{{ url_for('account.login')}}">Iniciar</a></li>
+          {% else %}
+          <li class="nav-item"><a class="nav-link" href="{{ url_for('account.profile')}}">Perfil</a>
+          <li class="nav-item"><a class="nav-link" href="{{ url_for('account.logout')}}">Cerrar Sesion</a>
+          {% endif %}
+          </li>
         </ul>
       </div>
-    </nav>
+</nav>
+
+
   {% block body %}{% endblock %}
   {% with messages = get_flashed_messages() %}
     {% if messages %}
