--- a/src/templates/home.html
+++ b/src/templates/home.html
@@ -4,22 +4,31 @@
 
 {% endblock %}
 {% block body %}
-<!-- <h1>Hi, {{ current_user.username }}!</h1> -->
 
-<table class="table table-striped table-hover table-bordered table-sm bg-white">
-    <thead>
-        <tr>
-            <td>Nombre de producto</td>
-            <td>Precio</td>
-        </tr>
-    </thead>
-    {% for product in products %}
-    <tbody>
-        <tr>
-            <td>{{product.0}}</td>
-            <td>{{product.1}}</td>
-        </tr>
-    </tbody>
-    {% endfor %}
 
+         <div class="album py-5 bg-light">
+            <div class="container">
+
+              <div class="row row-cols-1 row-cols-sm-2 row-cols-md-3 g-3">
+                {% for product in prod_data %}      
+                <div class="col">
+                  <div class="card shadow-sm">
+<!--                     <svg class="bd-placeholder-img card-img-top" width="100%" height="225" xmlns="http://www.w3.org/2000/svg" role="img" aria-label="Placeholder: Thumbnail" preserveAspectRatio="xMidYMid slice" focusable="false">
+ -->                 
+                    <img src="{{ url_for('static', filename='images/') }}{{product.prod_file}}" class="img-thumbnail" style=max-width: 400px;>
+                    <div class="card-body">
+                      <h5>{{ product.prod_name }}</h5>
+                      <p class="card-text">{{product.prod_desc}}</p>
+                      <span class="text-muted">${{product.prod_price}}</span>
+                      <div class="d-flex justify-content-between align-items-center">
+                        <div class="btn-group">
+                          <button type="button" class="btn btn-sm btn-outline-secondary">Comprar</button>
+                        </div>
+                      </div>
+                    </div>
+                  </div>
+                </div>
+                {% endfor %}
 {% endblock %}
+
+
