--- a/src/templates/home.html
+++ b/src/templates/home.html
@@ -15,14 +15,14 @@
                   <div class="card shadow-sm">
 <!--                     <svg class="bd-placeholder-img card-img-top" width="100%" height="225" xmlns="http://www.w3.org/2000/svg" role="img" aria-label="Placeholder: Thumbnail" preserveAspectRatio="xMidYMid slice" focusable="false">
  -->                 
-                    <img src="{{ url_for('static', filename='images/') }}{{product.prod_file}}" class="img-thumbnail" style=max-width: 400px;>
+                    <img src="{{ url_for('static', filename='images/') }}{{product.prod_file}}" class="img-thumbnail" style=max-width:400px;>
                     <div class="card-body">
                       <a href="{{url_for('product.product_detail', product_id=product.prod_id)}}"><h5>{{ product.prod_name }}</h5></a>
                       <p class="card-text">{{product.prod_desc}}</p>
                       <span class="text-muted">${{product.prod_price}}</span>
                       <div class="d-flex justify-content-between align-items-center">
                         <div class="btn-group">
-                          <button type="button" class="btn btn-sm btn-outline-secondary">Comprar</button>
+                          <a href="{{url_for('cart.addCart', id=product.prod_id)}}" class="btn btn-sm btn-warning">Add to cart</a>
                         </div>
                       </div>
                     </div>
