--- a/src/templates/admin/base.html
+++ b/src/templates/admin/base.html
@@ -23,7 +23,7 @@
     
 
     <nav class="navbar navbar-expand-md navbar-dark bg-dark">
-      <a class="navbar-brand" href="#">E-buysite</a>
+      <a class="navbar-brand" href="{{ url_for('public.home')}}">E-buysite</a>
       <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav">
         <span class="navbar-toggler-icon"></span>
       </button>
