--- a/src/templates/base.html
+++ b/src/templates/base.html
@@ -6,6 +6,7 @@
   <title>E-buysite</title>
   <meta name='viewport' content='width=device-width, initial-scale=1'>
   <link rel='stylesheet' href='{{ url_for('static', filename='css/stylesheet.css')}}'>
+  <link rel='stylesheet' href='https://cdn.jsdelivr.net/npm/bootstrap-icons@1.7.2/font/bootstrap-icons.css'>    
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
   {% block head %}{% endblock %}
 </head>
@@ -27,25 +28,33 @@
       </button>
       <div class="collapse navbar-collapse" id="navbarSupportedContent">
         <ul class="navbar-nav navbar-nav me-auto">
-          <li>
-            <a class="nav-link" href="#">Categorias</a>
+
           </li>
+          {% if current_user.id == 1 %}
+          <li>
+            <a class="nav-link" href="{{ url_for('admin.home')}}">Administrador</a>
+          </li>
+          {% endif %}
         </ul>
         <ul class="navbar-nav justify-content-end flex-grow-1 pe-3">
+          <li>
+          <a href="#"><span id="boot-icon" class="bi bi-cart" style="font-size: 29px; color: rgb(255, 210, 48);"></span></a>
+          </li>
           {% if current_user.is_anonymous %}
-          <li class="nav-item"><a class="btn btn-secondary" href="{{ url_for('account.login')}}">Iniciar</a></li>
+          <li class="nav-item"><a class="btn btn-warning" href="{{ url_for('account.login')}}">Iniciar</a></li>
           {% else %}
-          <li class="nav-item"><a class="btn btn-secondary" href="{{ url_for('account.profile')}}">Perfil</a>
+          <li class="nav-item"><a href="{{ url_for('account.profile')}}"><span id="boot-icon" class="bi bi-person" style="font-size: 29px; color: rgb(255, 210, 48);"></a>
             
           <li class="nav-item"><a class="btn btn-secondary" href="{{ url_for('account.logout')}}">Cerrar Sesion</a>
           {% endif %}
-          </li>
         </ul>
       </div>
-</nav>
+  </nav>
 
 
   {% block body %}{% endblock %}
+
+  
   {% with messages = get_flashed_messages() %}
     {% if messages %}
       <ul class=flashes>
@@ -55,6 +64,7 @@
       </ul>
     {% endif %}
   {% endwith %}
+  
   
 </body>
 </html>
