--- a/src/templates/base.html
+++ b/src/templates/base.html
@@ -38,7 +38,7 @@
         </ul>
         <ul class="navbar-nav justify-content-end flex-grow-1 pe-3">
           <li>
-          <a href="#"><span id="boot-icon" class="bi bi-cart" style="font-size: 29px; color: rgb(255, 210, 48);"></span></a>
+          <a href="{{ url_for('cart.show_cart')}}"><span id="boot-icon" class="bi bi-cart" style="font-size: 29px; color: rgb(255, 210, 48);"></span></a>
           </li>
           {% if current_user.is_anonymous %}
           <li class="nav-item"><a class="btn btn-warning" href="{{ url_for('account.login')}}">Iniciar</a></li>
