--- a/src/templates/cart/cart.html
+++ b/src/templates/cart/cart.html
@@ -5,23 +5,33 @@
 {% endblock %}
 {% block body %}
 <table class="table table-striped table-hover table-bordered table-sm bg-white">
+    <thead>
+        <th>Image</th>
+        <th>Name</th>
+        <th>Quantity</th>
+        <th>Sub Total</th>
+    </thead>
+    <tbody>
+        {% for key,product in session['Cart'].items() %}
         <tr>
-            <th>Producto</th>
-            <th>Precio</th>
-            <th>Cantidad</th>
-            <th></th>
-        </tr>
-        {% for c in cart_products %}
-        <tr>
-            <td >{{c.0}}</td>
-            <td>{{c.1}}</td>
-            <td>{{c.2}}
-                <a href="{{url_for('cart.increase_cart', product_id=c.1) }}" class="btn btn-warning" style="text-align: right;">+</a>
-                <a href="#" class="btn btn-warning" style="text-align: right;">-</a>
-            </td>
-            <th></th>
+            <td><img src="{{ url_for('static', filename='images/') }}{{product.image}}" alt="{{product.name}}" width="50" height="45"></td>
+            <td>{{ product.name }}</td>
+            <td> <input type="number" name="quantity" min="1" max="10" value="{{product.quantity}}"> </td>
+            <!-- <td>{{ product.price }}</td> -->
+            {% set subtotal = product.quantity|int * product.price|float  %}
+            <td> ${{"%.2f"|format(subtotal)}}
+            <td><button type="submit" class="btn btn-sm btn-danger float-right">Eliminar</button></td>
         </tr>
         {% endfor %}
+    </tbody>
 </table>
-<a href="#" class="btn btn-primary">Finalizar Compra</a>
+<hr>
+<table class="table table-sm">
+    <tr>
+        <td><a href="#" class="btn btn-primary">Finalizar Compra</a></td>
+        <td><h5>Total: {{total}}</h5></td>
+        <td> <a href="" class="btn btn-danger btn-sm float-right mr-4"> Vaciar Carrito</a> </td>
+    </tr>
+
+</table>
 {% endblock %}
