--- a/src/templates/products/product_detail.html
+++ b/src/templates/products/product_detail.html
@@ -10,5 +10,10 @@
 	<img src="{{ url_for('static', filename='images/') }}{{product.prod_file}}">
 	<p>$ {{ product.prod_price }}</p>
 	<p>Quedan {{ product.prod_quantity }} disponibles</p>
-	<a class="btn btn-outline-success">Agregar al carrito</a>
+	<form action="{{url_for('cart.addCart')}}" method="post">
+		<input type="hidden" name="product_id" value="{{product.prod_id}}">
+		<button type="submit" class="btn btn-sm btn-warning float-right">Add to Cart</button>
+		<label for=""> Quantity: </label>
+		<input type="number" name="quantity" value="1" min="1" max="{{product.prod_quantity}}">             
+	</form>
 {% endblock %}
