--- a/src/templates/base.html
+++ b/src/templates/base.html
@@ -39,8 +39,12 @@
         <ul class="navbar-nav justify-content-end flex-grow-1 pe-3">
           <li>
           </li>
+          {% if session['Cart']|length == 0 %}
+            <a href="{{ url_for('cart.showCart')}}"> <span id="boot-icon" class="bi bi-cart" style="font-size: 30px; color: rgb(255, 210, 48);"></span></a>
+          {% else %}
+            <a href="{{ url_for('cart.showCart')}}"> <span id="boot-icon" class="bi bi-cart-check-fill" style="font-size: 30px; color: rgb(255, 210, 48);"></span></a>
+          {% endif %}
           {% if current_user.is_anonymous %}
-          <a href="{{ url_for('cart.showCart')}}">Cart ({{session['Cart']|length}})</a>
           <li class="nav-item"><a class="btn btn-warning" href="{{ url_for('account.login')}}">Iniciar</a></li>
           {% else %}
           <li class="nav-item"><a href="{{ url_for('account.profile')}}"><span id="boot-icon" class="bi bi-person" style="font-size: 29px; color: rgb(255, 210, 48);"></a>
