--- a/src/templates/cart/cart.html
+++ b/src/templates/cart/cart.html
@@ -4,7 +4,7 @@
 
 {% endblock %}
 {% block body %}
-    {% if session['Cart']|length == 0 %}
+    {% if empty == 1 %}
         <table>
             <tr>
                 <td><h5>No hay productos en el carrito. Vuelva prontos </h5></td>
