--- a/src/templates/products/product_detail.html
+++ b/src/templates/products/product_detail.html
@@ -4,7 +4,7 @@
 
 {% endblock %}
 {% block body %}
-<body>
+<div class="container">
 	<h2>{{ product.prod_name }}</h2>
 	<h5>{{ category.cat_name }} </h5>
 	<img src="{{ url_for('static', filename='images/') }}{{product.prod_file}}">
@@ -16,4 +16,28 @@
 		<label for=""> Quantity: </label>
 		<input type="number" name="quantity" value="1" min="1" max="{{product.prod_quantity}}">             
 	</form>
+	<br>
+	<form method="POST" action="">
+		{{ form.hidden_tag() }}
+		<fieldset class="form-group">
+			<legend class="border-bottom mb-4">Comment</legend>
+			<div class="form-group">
+				{{ form.comment.label(class="form-control-label") }}
+				{% if form.comment.errors %}
+					{{ form.body(class="form-control form-control-lg is-invalid") }}
+					<div class="invalid-feedback">
+						{% for error in form.comment.errors %}
+							<span>{{ error }}</span>
+						{% endfor %}
+					</div>
+				{% else %}
+					{{ form.comment(class="form-control form-control-lg") }}
+				{% endif %}
+			</div>
+		</fieldset>
+		<div class="form-group">
+			{{ form.submit(class="btn btn-outline-info") }}
+		</div>
+	</form>
+</div>
 {% endblock %}
