--- a/src/templates/products/product_detail.html
+++ b/src/templates/products/product_detail.html
@@ -29,7 +29,7 @@
 				  </div>										 -->
 				</div>
 				<div class="form-group">
-					<textarea name="comment" class="form-control mb-10" rows="5" name="comment" placeholder="Messege" onfocus="this.placeholder = ''" onblur="this.placeholder = 'Messege'" required=""></textarea>
+					<textarea name="comment" class="form-control mb-10" rows="5" name="comment" placeholder="Deja tu comentario.." onfocus="this.placeholder = ''" onblur="this.placeholder = 'Deja tu comentario..'" required=""></textarea>
 				</div>
 				<button type="submit" class="primary-btn submit_btn">Enviar comentario</button>	
 			</form>
